[gd_scene load_steps=17 format=2]

[ext_resource path="res://save/Settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://buttons/settings-button-normal.tres" type="StyleBox" id=2]
[ext_resource path="res://buttons/button-normal-02.tres" type="StyleBox" id=3]
[ext_resource path="res://save/settings_container.gd" type="Script" id=4]
[ext_resource path="res://buttons/settings-button-hover.tres" type="StyleBox" id=5]
[ext_resource path="res://fonts/mukta/Mukta_8.tres" type="DynamicFontData" id=6]
[ext_resource path="res://buttons/button-hover-02.tres" type="StyleBox" id=7]
[ext_resource path="res://buttons/button-pressed-02.tres" type="StyleBox" id=8]
[ext_resource path="res://fonts/mukta/Mukta_16.tres" type="DynamicFontData" id=9]
[ext_resource path="res://buttons/button-pressed-01.tres" type="StyleBox" id=10]
[ext_resource path="res://buttons/button-hover-01.tres" type="StyleBox" id=11]
[ext_resource path="res://buttons/button-normal-01.tres" type="StyleBox" id=12]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 0.431373 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 0.431373 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 0.431373 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 0.431373 )
font_data = ExtResource( 9 )

[node name="SettingsContainer" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsBtn" type="Button" parent="."]
anchor_left = 0.95
anchor_top = 0.222
anchor_right = 0.987
anchor_bottom = 0.292
margin_top = 0.0799866
margin_right = 56.3199
margin_bottom = 46.88
rect_scale = Vector2( 0.3, 0.35 )
focus_mode = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" parent="." instance=ExtResource( 1 )]

[node name="OptionsBorder" parent="Settings/Options" index="0"]
margin_top = -90.5
margin_bottom = 90.5

[node name="OptionsBG" parent="Settings/Options" index="1"]
margin_top = -89.5
margin_bottom = 89.5

[node name="HBoxContainer" parent="Settings/Options" index="2"]
margin_top = -79.0
margin_bottom = 82.0

[node name="QuitBtn" type="Button" parent="Settings/Options/HBoxContainer" index="0"]
margin_right = 110.0
margin_bottom = 29.0
focus_mode = 0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 0.803922, 0.803922, 1 )
enabled_focus_mode = 0
text = "QUIT TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FastModeBtn" parent="Settings/Options/HBoxContainer" index="1"]
margin_top = 33.0
margin_bottom = 62.0

[node name="SoundBtn" parent="Settings/Options/HBoxContainer" index="2"]
margin_top = 66.0
margin_bottom = 95.0

[node name="MusicBtn" parent="Settings/Options/HBoxContainer" index="3"]
margin_top = 99.0
margin_bottom = 128.0

[node name="BackBtn" parent="Settings/Options/HBoxContainer" index="4"]
margin_top = 132.0
margin_bottom = 161.0

[node name="QuitConfirmation" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="QuitConfirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -90.5
margin_right = 66.0
margin_bottom = 90.5
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmBorder" type="ColorRect" parent="QuitConfirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.0
margin_top = -37.0
margin_right = 129.0
margin_bottom = 37.0
color = Color( 0.596078, 0.580392, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmBG" type="ColorRect" parent="QuitConfirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -36.0
margin_right = 128.0
margin_bottom = 36.0
color = Color( 0.309804, 0.305882, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="QuitConfirmation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -32.0
margin_right = 116.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 4 )
text = "ARE YOU SURE YOU WANT TO QUIT?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesBtn" type="Button" parent="QuitConfirmation"]
margin_left = 232.0
margin_top = 176.0
margin_right = 296.0
margin_bottom = 205.0
focus_mode = 0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/disabled = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "YES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoBtn" type="Button" parent="QuitConfirmation"]
margin_left = 344.0
margin_top = 176.0
margin_right = 408.0
margin_bottom = 205.0
focus_mode = 0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/disabled = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="Settings"]
